--- a/AVAssetReverse/Base.lproj/Main.storyboard
+++ b/AVAssetReverse/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,20 +18,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zYo-yL-DaS">
-                                <rect key="frame" x="20" y="92" width="280" height="280"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlc-Yz-dXa">
+                                <rect key="frame" x="108" y="41" width="105" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="105" id="NSh-Ib-7Oa"/>
+                                    <constraint firstAttribute="height" constant="30" id="XNl-RM-KkI"/>
+                                </constraints>
+                                <state key="normal" title="Reverse"/>
+                                <connections>
+                                    <action selector="reverse:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0LE-DJ-a7S"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfX-ou-ZYw">
+                                <rect key="frame" x="108" y="79" width="105" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hbA-Zl-PJ0"/>
+                                    <constraint firstAttribute="width" constant="105" id="xTI-cb-uDc"/>
+                                </constraints>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IMd-ha-vL5"/>
+                                </connections>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="b2P-f9-nYQ">
+                                <rect key="frame" x="20" y="124" width="280" height="2"/>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1c-Ia-0Il">
+                                <rect key="frame" x="20" y="134" width="280" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="o1c-Ia-0Il" firstAttribute="trailing" secondItem="b2P-f9-nYQ" secondAttribute="trailing" id="07D-mp-Kef"/>
+                            <constraint firstItem="xlc-Yz-dXa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="21" id="ASj-4I-6Gm"/>
+                            <constraint firstItem="hfX-ou-ZYw" firstAttribute="top" secondItem="xlc-Yz-dXa" secondAttribute="bottom" constant="8" id="CGe-GU-pOK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o1c-Ia-0Il" secondAttribute="bottom" constant="413" id="GWL-pq-qBq"/>
+                            <constraint firstItem="o1c-Ia-0Il" firstAttribute="leading" secondItem="b2P-f9-nYQ" secondAttribute="leading" id="H26-4K-bpl"/>
+                            <constraint firstItem="b2P-f9-nYQ" firstAttribute="top" secondItem="hfX-ou-ZYw" secondAttribute="bottom" constant="15" id="Ocy-dZ-Rfb"/>
+                            <constraint firstItem="b2P-f9-nYQ" firstAttribute="centerX" secondItem="hfX-ou-ZYw" secondAttribute="centerX" id="WX2-Xw-Gp9"/>
+                            <constraint firstItem="xlc-Yz-dXa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lYR-0F-Bpx"/>
+                            <constraint firstItem="hfX-ou-ZYw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oFR-FJ-5ot"/>
+                            <constraint firstItem="o1c-Ia-0Il" firstAttribute="top" secondItem="b2P-f9-nYQ" secondAttribute="bottom" constant="8" symbolic="YES" id="oKt-SS-Vqr"/>
+                            <constraint firstItem="b2P-f9-nYQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="sWq-YA-DcM"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="playerView" destination="zYo-yL-DaS" id="qPi-GC-FDl"/>
+                        <outlet property="cancelButton" destination="hfX-ou-ZYw" id="DSj-LT-j0n"/>
+                        <outlet property="infoLabel" destination="o1c-Ia-0Il" id="PUD-tC-9nO"/>
+                        <outlet property="progressView" destination="b2P-f9-nYQ" id="oqZ-jn-wFq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="369.60000000000002" y="224.83333333333334"/>
+            <point key="canvasLocation" x="369" y="224"/>
         </scene>
     </scenes>
 </document>
